@@ -136,9 +136,7 @@ public class PasteAction extends AppAction implements FlavorListener {
     }
 
     private void paste(Object where, Object content) {
-        paste(where, content, (DataChannelDescriptor) getProjectSession()
-                .project()
-                .getRootNode(), getProjectSession().getSelectedDataMap());
+        paste(where, content, (DataChannelDescriptor) getProjectSession().project().getRootNode());
     }
 
     /**
@@ -147,23 +145,17 @@ public class PasteAction extends AppAction implements FlavorListener {
     public void paste(
             Object where,
             Object content,
-            DataChannelDescriptor dataChannelDescriptor,
-            DataMap map) {
+            DataChannelDescriptor dataChannelDescriptor) {
 
         ProjectSession session = getProjectSession();
 
-        /**
-         * Add a little intelligence - if a tree leaf is selected, we can paste to a
-         * parent datamap
-         */
+        // Add a little intelligence - if a tree leaf is selected, we can paste to a parent datamap
         if (isTreeLeaf(where) && isTreeLeaf(content)) {
             where = session.getSelectedDataMap();
         }
 
-        if ((where instanceof DataChannelDescriptor || where instanceof DataNodeDescriptor)
-                && content instanceof DataMap) {
+        if ((where instanceof DataChannelDescriptor || where instanceof DataNodeDescriptor) && content instanceof DataMap dataMap) {
             // paste DataMap to DataDomain or DataNode
-            DataMap dataMap = ((DataMap) content);
 
             dataMap.setName(NameBuilder
                     .builder(dataMap, dataChannelDescriptor)
@@ -171,16 +163,12 @@ public class PasteAction extends AppAction implements FlavorListener {
                     .dupesPattern(COPY_PATTERN)
                     .name());
 
-            /**
-             * Update all names in the new DataMap, so that they would not conflict with
-             * names from other datamaps of this domain
-             */
-
-            // add some intelligence - if we rename an entity, we should rename all links
+            // Update all names in the new DataMap, so that they would not conflict with
+            // names from other datamaps of this domain.
+            // Add some intelligence - if we rename an entity, we should rename all links
             // to it as well
             Map<String, String> renamedDbEntities = new HashMap<>();
             Map<String, String> renamedObjEntities = new HashMap<>();
-            Map<String, String> renamedEmbeddables = new HashMap<>();
 
             for (DbEntity dbEntity : dataMap.getDbEntities()) {
                 String oldName = dbEntity.getName();
@@ -209,16 +197,11 @@ public class PasteAction extends AppAction implements FlavorListener {
             }
 
             for (Embeddable embeddable : dataMap.getEmbeddables()) {
-                String oldName = embeddable.getClassName();
                 embeddable.setClassName(NameBuilder
                         .builder(embeddable, dataMap)
                         .baseName(embeddable.getClassName())
                         .dupesPattern(COPY_PATTERN)
                         .name());
-
-                if (!oldName.equals(embeddable.getClassName())) {
-                    renamedEmbeddables.put(oldName, embeddable.getClassName());
-                }
             }
 
             for (Procedure procedure : dataMap.getProcedures()) {
@@ -265,15 +248,13 @@ public class PasteAction extends AppAction implements FlavorListener {
             }
 
             CreateDataMapAction.onMapCreated(this, getProjectSession(), dataMap);
-        } else if (where instanceof DataMap) {
+        } else if (where instanceof DataMap dataMap) {
             // paste DbEntity to DataMap
-            final DataMap dataMap = ((DataMap) where);
 
             // clear data map parent cache
             clearDataMapCache(dataMap);
 
-            if (content instanceof DbEntity) {
-                DbEntity dbEntity = (DbEntity) content;
+            if (content instanceof DbEntity dbEntity) {
                 dbEntity.setName(NameBuilder
                         .builder(dbEntity, dataMap)
                         .baseName(dbEntity.getName())
@@ -282,9 +263,8 @@ public class PasteAction extends AppAction implements FlavorListener {
 
                 dataMap.addDbEntity(dbEntity);
                 CreateDbEntityAction.onDbEntityCreated(this, session, dbEntity);
-            } else if (content instanceof ObjEntity) {
+            } else if (content instanceof ObjEntity objEntity) {
                 // paste ObjEntity to DataMap
-                ObjEntity objEntity = (ObjEntity) content;
                 objEntity.setName(NameBuilder.builder(objEntity, dataMap)
                         .baseName(objEntity.getName())
                         .dupesPattern(COPY_PATTERN)
@@ -296,9 +276,8 @@ public class PasteAction extends AppAction implements FlavorListener {
                         session,
                         dataMap,
                         objEntity);
-            } else if (content instanceof Embeddable) {
+            } else if (content instanceof Embeddable embeddable) {
                 // paste Embeddable to DataMap
-                Embeddable embeddable = (Embeddable) content;
                 embeddable.setClassName(NameBuilder
                         .builder(embeddable, dataMap)
                         .baseName(embeddable.getClassName())
@@ -311,8 +290,7 @@ public class PasteAction extends AppAction implements FlavorListener {
                         session,
                         dataMap,
                         embeddable);
-            } else if (content instanceof QueryDescriptor) {
-                QueryDescriptor query = (QueryDescriptor) content;
+            } else if (content instanceof QueryDescriptor query) {
 
                 query.setName(NameBuilder
                         .builder(query, dataMap)
@@ -323,9 +301,8 @@ public class PasteAction extends AppAction implements FlavorListener {
 
                 dataMap.addQueryDescriptor(query);
                 QueryTypeDialog.fireQueryEvent(this, session, dataMap, query);
-            } else if (content instanceof Procedure) {
+            } else if (content instanceof Procedure procedure) {
                 // paste Procedure to DataMap
-                Procedure procedure = (Procedure) content;
                 procedure.setName(NameBuilder
                         .builder(procedure, dataMap)
                         .dupesPattern(COPY_PATTERN)
@@ -339,11 +316,9 @@ public class PasteAction extends AppAction implements FlavorListener {
                         dataMap,
                         procedure);
             }
-        } else if (where instanceof DbEntity) {
-            final DbEntity dbEntity = (DbEntity) where;
+        } else if (where instanceof DbEntity dbEntity) {
 
-            if (content instanceof DbAttribute) {
-                DbAttribute attr = (DbAttribute) content;
+            if (content instanceof DbAttribute attr) {
                 attr.setName(NameBuilder
                         .builder(attr, dbEntity)
                         .dupesPattern(COPY_PATTERN)
@@ -353,8 +328,7 @@ public class PasteAction extends AppAction implements FlavorListener {
                 dbEntity.addAttribute(attr);
                 CreateAttributeAction.fireDbAttributeEvent(this, session, session
                         .getSelectedDataMap(), dbEntity, attr);
-            } else if (content instanceof DbRelationship) {
-                DbRelationship rel = (DbRelationship) content;
+            } else if (content instanceof DbRelationship rel) {
                 rel.setName(NameBuilder
                         .builder(rel, dbEntity)
                         .baseName(rel.getName())
@@ -368,11 +342,9 @@ public class PasteAction extends AppAction implements FlavorListener {
                         dbEntity,
                         rel);
             }
-        } else if (where instanceof ObjEntity) {
-            ObjEntity objEntity = (ObjEntity) where;
+        } else if (where instanceof ObjEntity objEntity) {
 
-            if (content instanceof ObjAttribute) {
-                ObjAttribute attr = (ObjAttribute) content;
+            if (content instanceof ObjAttribute attr) {
                 attr.setName(NameBuilder
                         .builder(attr, objEntity)
                         .baseName(attr.getName())
@@ -382,8 +354,7 @@ public class PasteAction extends AppAction implements FlavorListener {
                 objEntity.addAttribute(attr);
                 CreateAttributeAction.fireObjAttributeEvent(this, session, session
                         .getSelectedDataMap(), objEntity, attr);
-            } else if (content instanceof ObjRelationship) {
-                ObjRelationship rel = (ObjRelationship) content;
+            } else if (content instanceof ObjRelationship rel) {
                 rel.setName(NameBuilder
                         .builder(rel, objEntity)
                         .baseName(rel.getName())
@@ -396,8 +367,7 @@ public class PasteAction extends AppAction implements FlavorListener {
                         session,
                         objEntity,
                         rel);
-            } else if (content instanceof ObjCallbackMethod) {
-                ObjCallbackMethod method = (ObjCallbackMethod) content;
+            } else if (content instanceof ObjCallbackMethod method) {
 
                 method.setName(NameBuilder
                         .builderForCallbackMethod(objEntity)
@@ -413,11 +383,9 @@ public class PasteAction extends AppAction implements FlavorListener {
 
                 getProjectSession().fireCallbackMethodEvent(ce);
             }
-        } else if (where instanceof Embeddable) {
-            final Embeddable embeddable = (Embeddable) where;
+        } else if (where instanceof Embeddable embeddable) {
 
-            if (content instanceof EmbeddableAttribute) {
-                EmbeddableAttribute attr = (EmbeddableAttribute) content;
+            if (content instanceof EmbeddableAttribute attr) {
                 attr.setName(NameBuilder
                         .builder(attr, embeddable)
                         .baseName(attr.getName())
@@ -432,12 +400,10 @@ public class PasteAction extends AppAction implements FlavorListener {
                         attr);
             }
 
-        } else if (where instanceof Procedure) {
+        } else if (where instanceof Procedure procedure) {
             // paste param to procedure
-            final Procedure procedure = (Procedure) where;
 
-            if (content instanceof ProcedureParameter) {
-                ProcedureParameter param = (ProcedureParameter) content;
+            if (content instanceof ProcedureParameter param) {
 
                 param.setName(NameBuilder
                         .builder(param, procedure)
@@ -491,7 +457,7 @@ public class PasteAction extends AppAction implements FlavorListener {
                     CMTransferable.CAYENNE_FLAVOR);
 
             if (content instanceof List) {
-                content = ((List) content).get(0);
+                content = ((List) content).getFirst();
             }
 
             Object currentObject = getProjectSession().getSelectedObject();
@@ -500,10 +466,7 @@ public class PasteAction extends AppAction implements FlavorListener {
                 return false;
             }
 
-            /**
-             * Checking all available pairs source-pasting object
-             */
-
+            //  Checking all available pairs source-pasting object
             return ((currentObject instanceof DataChannelDescriptor || currentObject instanceof DataNodeDescriptor) && content instanceof DataMap)
                     ||
 
